--- a/anime-detail.html
+++ b/anime-detail.html
@@ -1390,7 +1390,7 @@
       },
       21: {
         title: "Shiunji-ke no Kodomotachi",
-        desc: "¡Puedo deslizarme lentamente, pero no podre desbordar todo mi amor! Un día, Kazushi Sudou recibe la visita de las hermanas Ayane y Kotone Shirakawa, sus dos hermosas amigas de la infancia. Aunque no tienen relación sanguínea, ambas lo llaman con cariño como «hermano». De la nada, y por venganza de Ayane, ambas hermanas deciden unirse a Kazushi en su pequeño baño, y terminan bañándose juntos. Entre el dulce aroma y espuma de baño, Kotone tiene un pequeño accidente con Kazushi y ambos terminan «conectados». ¿Podrá el pervertido Kazushi resistir a los encantos de estas hermosas hermanas?.",
+        desc: "La familia Shiunji y sus siete hijos residen en una mansión del barrio tokiota de Setagaya. El hijo mayor, Arata, está cansado de que sus cinco hermanas y fantasea con la posibilidad de vivir lejos de ellas. Sin embargo, el padre de Arata les revela algo sorprendente: ¡en realidad son todos adoptados! Con este nuevo dato sobre la mesa, las relaciones entre los hermanos cambiarán completamente.",
         cover: "Shiux.jpg",
         seasons: [
           {
