--- a/video-player.html
+++ b/video-player.html
@@ -214,6 +214,8 @@
           "7": { link:'https://www.dropbox.com/scl/fi/7dahj8mn95vjqxpdkoqua/DAN-DA-DAN-T2-Cap-7.mp4?rlkey=94i1osas780y0d7ipvgu0x7j2&st=5tk1fa0o&raw=1', title:'DAN DA DAN T2 Cap 7' },
           "8": { link:'https://www.dropbox.com/scl/fi/bsyg38ktp14z17ef1xgco/DAN-DA-DAN-T2-Cap-8.mp4?rlkey=q2ors3ape1yj7nurdq2nrzezv&st=05hi1o7l&raw=1', title:'DAN DA DAN T2 Cap 8' },
           "9": { link:'https://www.dropbox.com/scl/fi/guubes1mt50g1sih7ar90/DAN-DA-DAN-T2-Cap-9.mp4?rlkey=yvlgc6b461rgjkrt6qfuziekz&st=xq00noto&raw=1', title:'DAN DA DAN T2 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/ll0vyhx3hah3paw6ba4l7/DAN-DA-DAN-T2-Cap-10.mp4?rlkey=n350hm7vpxvqb61zjial31uvw&st=p7nfkexi&raw=1', title:'DAN DA DAN T2 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/7hkpp0ak0xk3didyzhqbe/DAN-DA-DAN-T2-Cap-11.mp4?rlkey=01g5v32yuat68m26b7o7ldn88&st=tv1po8wi&raw=1', title:'DAN DA DAN T2 Cap 11' },
         }
       },
       "2": {
@@ -504,25 +506,25 @@
           "1": { link:'https://www.dropbox.com/scl/fi/dg1gihw1m9a4cx3ur9ynm/Tensei-Shitara-Slime-Datta-Ken-T1-Cap-OVA-1.mp4?rlkey=om37eijsa86nctlw5jxqn13rm&st=fsaih6eh&raw=1', title:'Tensei Shitara Slime Datta Ken OVA 1' },
         },
         "3": {
-          "2": { link:'https://www.dropbox.com/scl/fi/eo6nnmc76ptcfdponu9iq/Tensei-Shitara-Slime-Datta-Ken-T1-Cap-OVA-2.mp4?rlkey=vbh8tway6rpca2gag7zcakip1&st=mxxfapr6&raw=1', title:'Tensei Shitara Slime Datta Ken OVA 2' },
+          "1": { link:'https://www.dropbox.com/scl/fi/eo6nnmc76ptcfdponu9iq/Tensei-Shitara-Slime-Datta-Ken-T1-Cap-OVA-2.mp4?rlkey=vbh8tway6rpca2gag7zcakip1&st=mxxfapr6&raw=1', title:'Tensei Shitara Slime Datta Ken OVA 2' },
         },
         "4": {
-          "3": { link:'https://www.dropbox.com/scl/fi/qe68tplarmtxdk0rdgo7v/Tensei-Shitara-Slime-Datta-Ken-T1-Cap-OVA-3.mp4?rlkey=swantjta9zwj59tfvuwa8gfie&st=scx8f532&raw=1', title:'Tensei Shitara Slime Datta Ken OVA 3' },
+          "1": { link:'https://www.dropbox.com/scl/fi/qe68tplarmtxdk0rdgo7v/Tensei-Shitara-Slime-Datta-Ken-T1-Cap-OVA-3.mp4?rlkey=swantjta9zwj59tfvuwa8gfie&st=scx8f532&raw=1', title:'Tensei Shitara Slime Datta Ken OVA 3' },
         },
         "5": {
-          "4": { link:'https://www.dropbox.com/scl/fi/h9haq0noqzt42uzchukyp/Tensei-Shitara-Slime-Datta-Ken-T1-Cap-OVA-4.mp4?rlkey=niv26dx2iiuduetxn2q32r2ns&st=3q847623&raw=1', title:'Tensei Shitara Slime Datta Ken OVA 4' },
+          "1": { link:'https://www.dropbox.com/scl/fi/h9haq0noqzt42uzchukyp/Tensei-Shitara-Slime-Datta-Ken-T1-Cap-OVA-4.mp4?rlkey=niv26dx2iiuduetxn2q32r2ns&st=3q847623&raw=1', title:'Tensei Shitara Slime Datta Ken OVA 4' },
         },
         "6": {
-          "5": { link:'https://www.dropbox.com/scl/fi/c1m3ykx8rzhag5sqvqdb3/Tensei-Shitara-Slime-Datta-Ken-T1-Cap-OVA-5.mp4?rlkey=vj1p96f27j5ojxu8lskfp8yo5&st=fmmaj72k&raw=1', title:'Tensei Shitara Slime Datta Ken OVA 5' },
+          "1": { link:'https://www.dropbox.com/scl/fi/c1m3ykx8rzhag5sqvqdb3/Tensei-Shitara-Slime-Datta-Ken-T1-Cap-OVA-5.mp4?rlkey=vj1p96f27j5ojxu8lskfp8yo5&st=fmmaj72k&raw=1', title:'Tensei Shitara Slime Datta Ken OVA 5' },
         },
         "7": {
           "1": { link:'https://www.dropbox.com/scl/fi/wn1mj5866g19ru1oeflst/Tensei-Shitara-Slime-Datta-Ken-Coleus-no-Yume-ESPECIAL-1.mp4?rlkey=qeve4wwo9h92jdt51dr12may6&st=vffdbn2n&raw=1', title:'Tensei Shitara Slime Datta Ken Coleus no Yume ESPECIAL 1' },
         },
         "8": {
-          "2": { link:'https://www.dropbox.com/scl/fi/ofego48zdjtnhh17guu81/Tensei-Shitara-Slime-Datta-Ken-Coleus-no-Yume-ESPECIAL-3.mp4?rlkey=ol4r0bsb3ir6d3da1f0pwlxcs&st=vc231rrf&raw=1', title:'Tensei Shitara Slime Datta Ken Coleus no Yume ESPECIAL 2' },
+          "1": { link:'https://www.dropbox.com/scl/fi/ofego48zdjtnhh17guu81/Tensei-Shitara-Slime-Datta-Ken-Coleus-no-Yume-ESPECIAL-3.mp4?rlkey=ol4r0bsb3ir6d3da1f0pwlxcs&st=vc231rrf&raw=1', title:'Tensei Shitara Slime Datta Ken Coleus no Yume ESPECIAL 2' },
         },
         "9": {
-          "3": { link:'https://www.dropbox.com/scl/fi/uybxp5xjjwx99ob2bb8ux/FDownloader.Net_AQOhjAIXNx3QiC6NQpKOxF6_qlOyAG1m_ua6kqDvbZXXc-yn26Qb0Sgp1r10GbmemSNKzhEN-6LhJhZQp8s3QFjsLfvvPsfhWE7NtbdlTuV7N4EyTWJN4DhcGXIQRpysOo8Bs1yiNw_720p_-HD.mp4?rlkey=6x2yal7i0h8ut1gdofw231pwa&st=y13ci5lv&raw=1', title:'Tensei Shitara Slime Datta Ken Coleus no Yume ESPECIAL 3' },
+          "1": { link:'https://www.dropbox.com/scl/fi/uybxp5xjjwx99ob2bb8ux/FDownloader.Net_AQOhjAIXNx3QiC6NQpKOxF6_qlOyAG1m_ua6kqDvbZXXc-yn26Qb0Sgp1r10GbmemSNKzhEN-6LhJhZQp8s3QFjsLfvvPsfhWE7NtbdlTuV7N4EyTWJN4DhcGXIQRpysOo8Bs1yiNw_720p_-HD.mp4?rlkey=6x2yal7i0h8ut1gdofw231pwa&st=y13ci5lv&raw=1', title:'Tensei Shitara Slime Datta Ken Coleus no Yume ESPECIAL 3' },
         },
         "10": {
           "1": { link:'https://www.dropbox.com/scl/fi/1xrcdui64y7a3bjmw9z9e/Tensura-Nikki-Tensei-shitara-Slime-Datta-Ken-Cap-1.mp4?rlkey=2gekwanefsudfm8rv9vjrh5qb&st=kwhutwym&raw=1', title:'Tensura Nikki Tensei shitara Slime Datta Ken Cap 1' },
@@ -669,7 +671,7 @@
           "20": { link:'https://www.dropbox.com/scl/fi/spbtwk5bktqy709vq5u1y/To-Be-Hero-X-Cap-20.mp4?rlkey=hjs520pkn5sm2biuxxn59p62o&st=il41a4rz&raw=1', title:'To Be Hero X T1 Cap 20' },
           "21": { link:'https://www.dropbox.com/scl/fi/7u4u7rga0ied7sl5owvez/To-Be-Hero-X-T1-Cap-21.mp4?rlkey=471mvp9h0y0p8d4ydurqjivrz&st=s7ydz9re&raw=1', title:'To Be Hero X T1 Cap 21' },
           "22": { link:'https://www.dropbox.com/scl/fi/7lz27n4cw847y37jqsf6x/To-Be-Hero-X-Cap-22.mp4?rlkey=nyj9297zqdu30t5mgo5ehsuu8&st=9hmsacaf&raw=1', title:'To Be Hero X T1 Cap 22' },
-          "23": { link:'&raw=1', title:'To Be Hero X T1 Cap 23' },
+          "23": { link:'https://www.dropbox.com/scl/fi/21v111lsrv1rmkteyxzaj/To-Be-Hero-X-Cap-23.mp4?rlkey=37f9erms8hduowq6queg602jy&st=b38rfye0&raw=1', title:'To Be Hero X T1 Cap 23' },
           "24": { link:'&raw=1', title:'To Be Hero X T1 Cap 24' },
         }
       },
@@ -728,8 +730,8 @@
           "7": { link:'https://www.dropbox.com/scl/fi/38e8wk7hny49f5kmrxvn4/Demon-Slayer-T3-Cap-7.mp4?rlkey=arzmj4j9q49my561d53wz33mz&st=3g5194jx&raw=1', title:'Demon Slayer T3 Cap 7' },
           "8": { link:'https://www.dropbox.com/scl/fi/0mi49i6pqwyoaojb05qxs/Demon-Slayer-T3-Cap-8.mp4?rlkey=vvhl4ps26g4pvhpr28r9rhqow&st=zy5xcao8&raw=1', title:'Demon Slayer T3 Cap 8' },
           "9": { link:'https://www.dropbox.com/scl/fi/9cuurendbf05jhh0jf0dq/Demon-Slayer-T3-Cap-9.mp4?rlkey=j2rrklhgo60hn25cd97lcsbcz&st=bxpfux2j&raw=1', title:'Demon Slayer T3 Cap 9' },
-          "10": { link:'https://www.dropbox.com/scl/fi/itfxmx28xhmpm6rxs4txs/Demon-Slayer-T3-Cap-10.mp4?rlkey=tor9h8fcf5z4twl7ud0pf9i5j&st=51utz1ce&raw=1', title:'Demon Slayer T3 Cap 10' },
-          "11": { link:'https://www.dropbox.com/scl/fi/ioj9p4js27aeyf8gvnicz/Demon-Slayer-T3-Cap-11.mp4?rlkey=moenm7yc1r1o5x15r7zjjl3mx&st=rep95lyj&raw=1', title:'Demon Slayer T3 Cap 11' },
+          "10": { link:'https://www.dropbox.com/scl/fi/xmrkmiiwj8p7hb76opkbb/Demon-Slayer-T3-Cap-10.mp4?rlkey=gcb46p50aiyxljquu2bn177lf&st=9ld28qax&raw=1', title:'Demon Slayer T3 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/4o7q521u4uc12qpn801v3/Demon-Slayer-T3-Cap-11.mp4?rlkey=pu5n8jb8gq7kttbltuxdgkgtc&st=bmjtpzkb&raw=1', title:'Demon Slayer T3 Cap 11' },
         },
         "5": {
           "1": { link:'https://www.dropbox.com/scl/fi/rmo6nt1377t1i7fqsu3cd/Demon-Slayer-T4-Cap-1.mp4?rlkey=pxt3r4kod91l17arge6jzif74&st=tog12x5n&raw=1', title:'Demon Slayer T4 Cap 1' },
@@ -1066,7 +1068,7 @@
           "5": { link:'https://www.dropbox.com/scl/fi/95q9p2afam8wxov8af5d3/Kaiju-No.-8-T2-Cap-5.mp4?rlkey=nbve7du4759k0cn9wc9npiugi&st=ldm6yzyo&raw=1', title:'Kaiju No. 8 T2 Cap 5' },
           "6": { link:'https://www.dropbox.com/scl/fi/lg081b9m5gl7uci9wwd1z/Kaiju-No.-8-T2-Cap-6.mp4?rlkey=6r2sf5fl89k52vjs9tpv49e42&st=j3fhzdy8&raw=1', title:'Kaiju No. 8 T2 Cap 6' },
           "7": { link:'https://www.dropbox.com/scl/fi/wpka0g4t6ttewn2w71noi/Kaiju-No.-8-T2-Cap-7.mp4?rlkey=963nkht488ethbfgntmpd98e3&st=fhowdymo&raw=1', title:'Kaiju No. 8 T2 Cap 7' },
-          "8": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 8' },
+          "8": { link:'https://www.dropbox.com/scl/fi/82fnydxjtmgp1ztbcki9h/Kaiju-No.-8-T2-Cap-8.mp4?rlkey=ko11c7k2adtw1yre32g7myon2&st=43s78k56&raw=1', title:'Kaiju No. 8 T2 Cap 8' },
           "9": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 9' },
           "10": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 10' },
           "11": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 11' },
@@ -1092,8 +1094,8 @@
           "7": { link:'https://www.dropbox.com/scl/fi/0qj682ootccinps3bfltj/Clevatess-Majuu-no-Ou-to-Akago-T1-Cap-7.mp4?rlkey=ppu6c2iz4lhol6cedkv7y7lsp&st=23voo8h3&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 7' },
           "8": { link:'https://www.dropbox.com/scl/fi/6l7t3y46lwt3cq7wcnxty/Clevatess-Majuu-no-Ou-to-Akago-T1-Cap-8.mp4?rlkey=7p5n9wilxb8rje8ext2rfkaxi&st=ub8pj6f2&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 8' },
           "9": { link:'https://www.dropbox.com/scl/fi/gvkj6w4zgwnhdfgue0ude/Clevatess-Majuu-no-Ou-to-Akago-T1-Cap-9.mp4?rlkey=tfjebrtyoknee0efzc9y5583b&st=4mny68e0&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 9' },
-          "10": { link:'&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 10' },
-          "11": { link:'&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 11' },
+          "10": { link:'https://www.dropbox.com/scl/fi/2q4o20ftq2loqijy5myk4/Clevatess-Majuu-no-Ou-to-Akago-T1-Cap-10.mp4?rlkey=3f75o6nj7zq4k828k74kc328o&st=od47ox5c&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/9pkzxqi1d65zp6vz1tfjz/Clevatess-Majuu-no-Ou-to-Akago-T1-Cap-11.mp4?rlkey=8s8g112990f03eamass96z7js&st=mzvntv04&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 11' },
           "12": { link:'&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 12' },
         }
       },
@@ -1185,8 +1187,8 @@
           "18": { link:'https://www.dropbox.com/scl/fi/yvhscbmobhkm1llpdovmv/Dr.-Stone-Temporada-4-Capitulo-18.mp4?rlkey=frkoj8sj3zd5oamgu1iivho6o&st=8itmbong&raw=1', title:'Dr. Stone T4 Cap 18' },
           "19": { link:'https://www.dropbox.com/scl/fi/p7zypzyp7j7p4dh7ltdro/Dr.-Stone-Temporada-4-Capitulo-19.mp4?rlkey=oewatrsjovz67r61t032agk6b&st=zcber1o6&raw=1', title:'Dr. Stone T4 Cap 19' },
           "20": { link:'https://www.dropbox.com/scl/fi/arvrks4qr0yiynryb2vdb/Dr.-Stone-Temporada-4-Capitulo-20.mp4?rlkey=01skdvehz6eevtfkmbxwo4df4&st=glsu1w6u&raw=1', title:'Dr. Stone T4 Cap 20' },
-          "21": { link:'&raw=1', title:'Dr. Stone T4 Cap 21' },
-          "22": { link:'&raw=1', title:'Dr. Stone T4 Cap 22' },
+          "21": { link:'https://www.dropbox.com/scl/fi/rkhdgniclgoji0asog5rv/Dr.-Stone-Temporada-4-Capitulo-21.mp4?rlkey=4vhhxhyysvw305eqtsw7vabg4&st=9f1g4tgw&raw=1', title:'Dr. Stone T4 Cap 21' },
+          "22": { link:'https://www.dropbox.com/scl/fi/k93166284hmrun17xugbj/Dr.-Stone-Temporada-4-Capitulo-22.mp4?rlkey=6csrd2ju9ui479a46m03efx69&st=11rcg95m&raw=1', title:'Dr. Stone T4 Cap 22' },
         }
       },
       "29": {
