--- a/video-player.html
+++ b/video-player.html
@@ -672,7 +672,7 @@
           "21": { link:'https://www.dropbox.com/scl/fi/7u4u7rga0ied7sl5owvez/To-Be-Hero-X-T1-Cap-21.mp4?rlkey=471mvp9h0y0p8d4ydurqjivrz&st=s7ydz9re&raw=1', title:'To Be Hero X T1 Cap 21' },
           "22": { link:'https://www.dropbox.com/scl/fi/7lz27n4cw847y37jqsf6x/To-Be-Hero-X-Cap-22.mp4?rlkey=nyj9297zqdu30t5mgo5ehsuu8&st=9hmsacaf&raw=1', title:'To Be Hero X T1 Cap 22' },
           "23": { link:'https://www.dropbox.com/scl/fi/21v111lsrv1rmkteyxzaj/To-Be-Hero-X-Cap-23.mp4?rlkey=37f9erms8hduowq6queg602jy&st=b38rfye0&raw=1', title:'To Be Hero X T1 Cap 23' },
-          "24": { link:'&raw=1', title:'To Be Hero X T1 Cap 24' },
+          "24": { link:'https://www.dropbox.com/scl/fi/qvebldsfoif5950jonx7b/To-Be-Hero-X-Cap-24.mp4?rlkey=x6iqb6bl49lt451do84ynmm79&st=ieas6pu8&raw=1', title:'To Be Hero X T1 Cap 24' },
         }
       },
       "10": {
@@ -744,7 +744,7 @@
           "8": { link:'https://www.dropbox.com/scl/fi/ulkj0wvcmj8efqeso1jh5/Demon-Slayer-T4-Cap-8.mp4?rlkey=1wteohfyaq5ii3g8azyfyu0q6&st=p5rus16a&raw=1', title:'Demon Slayer T4 Cap 8' },
         },
         "6": {
-          "1": { link:'https://www.dropbox.com/scl/fi/ilt1e2961fnj24oouw3a7/Demon-Slayer-Pel-cula-Castillo-Infinito-GRABADO-EN-CINES-SUB.mp4?rlkey=mce6hiwfogyzizsagrlmndrbc&st=0gvs30oj&raw=1', title:'Demon Slayer Película: Castillo Infinito' },
+          "1": { link:'https://www.dropbox.com/scl/fi/w6kc166n3rfbvfkoex3et/Demon-Slayer-Castillo-Infinito-en-Espa-ol.mp4?rlkey=9cdzhsyadzsvlx81y7ftw5a33&st=v4e3l685&raw=1', title:'Demon Slayer Película: Castillo Infinito' },
         }
       },
       "11": {
@@ -1069,7 +1069,7 @@
           "6": { link:'https://www.dropbox.com/scl/fi/lg081b9m5gl7uci9wwd1z/Kaiju-No.-8-T2-Cap-6.mp4?rlkey=6r2sf5fl89k52vjs9tpv49e42&st=j3fhzdy8&raw=1', title:'Kaiju No. 8 T2 Cap 6' },
           "7": { link:'https://www.dropbox.com/scl/fi/wpka0g4t6ttewn2w71noi/Kaiju-No.-8-T2-Cap-7.mp4?rlkey=963nkht488ethbfgntmpd98e3&st=fhowdymo&raw=1', title:'Kaiju No. 8 T2 Cap 7' },
           "8": { link:'https://www.dropbox.com/scl/fi/82fnydxjtmgp1ztbcki9h/Kaiju-No.-8-T2-Cap-8.mp4?rlkey=ko11c7k2adtw1yre32g7myon2&st=43s78k56&raw=1', title:'Kaiju No. 8 T2 Cap 8' },
-          "9": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 9' },
+          "9": { link:'https://www.dropbox.com/scl/fi/piqowtwom0h07mhpsz97h/Kaiju-No.-8-T2-Cap-9.mp4?rlkey=odga8ew3man1jq2chkbbm8ntd&st=3vpdr6s4&raw=1', title:'Kaiju No. 8 T2 Cap 9' },
           "10": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 10' },
           "11": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 11' },
           "12": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 12' },
@@ -1310,7 +1310,7 @@
           "11": { link:'https://www.dropbox.com/scl/fi/11xuv5px0927dl02v69hh/Blue-Lock-T2-Cap-11.mp4?rlkey=zgowu647xe0sve5u32y11gufx&st=c0vgdgvp&raw=1', title:'Blue Lock T2 Cap 11' },
           "12": { link:'https://www.dropbox.com/scl/fi/s1jkuqqs6iym6hth5oi8i/Blue-Lock-T2-Cap-12.mp4?rlkey=ip9v8ghxwnq1pptpfpn2bniu5&st=8lvixz6j&raw=1', title:'Blue Lock T2 Cap 12' },
           "13": { link:'https://www.dropbox.com/scl/fi/wsf2vpm3kuwkzqi301ndu/Blue-Lock-T2-Cap-13.mp4?rlkey=cyo0ako2nuidqoiikxf7bsnhx&st=r2jn05k0&raw=1', title:'Blue Lock T2 Cap 13' },
-          "14": { link:'https://www.dropbox.com/scl/fi/d63q9umjenous319tjrdj/Blue-Lock-T2-Cap-14.mp4?rlkey=yxgvot0841151gxlwm7o5kuct&st=o6b39go6&raw=1', title:'Blue Lock T2 Cap 14' },
+          "14": { link:'https://www.dropbox.com/scl/fi/0g3i2dhfeswbp0hgo0f2i/Blue-Lock-T2-Cap-14.mp4?rlkey=6yph62dxihkqt2dm0evuwkgqz&st=c65kuwq1&raw=1', title:'Blue Lock T2 Cap 14' },
         }
       },
       "37": {
