--- a/anime-detail.html
+++ b/anime-detail.html
@@ -1046,7 +1046,7 @@
 	    name: "Película: Castillo Infinito",
             cover: "https://www.dropbox.com/scl/fi/ollpfsqskuvar6fg3zdza/Demon-Slayer-Pelicula-4.jpg?rlkey=trkr1eux9hwkpa1ryi7t3oxf8&st=0twpq5s7&raw=1",
             eps: [
-              { title: "Demon Slayer Película: Castillo Infinito (GRABADO EN CINES) (SUB)"},
+              { title: "Demon Slayer Película: Castillo Infinito"},
             ]
           }
         ]
