--- a/video-player.html
+++ b/video-player.html
@@ -939,8 +939,8 @@
           "5": { link:'https://www.dropbox.com/scl/fi/1xtfvj0aiy0wojl6uef9p/The-Rising-of-the-Shield-Hero-T4-Cap-5.mp4?rlkey=nh3s8g4ufmi4xf8el4a7adhns&st=ibbwvc1z&raw=1', title:'The Rising of the Shield Hero T4 Cap 5' },
           "6": { link:'https://www.dropbox.com/scl/fi/2xmq1nryqor4bzlm6swbp/The-Rising-of-the-Shield-Hero-T4-Cap-6.mp4?rlkey=qsoo5ezdrweqlfgsvr8qnz949&st=z3u9kskj&raw=1', title:'The Rising of the Shield Hero T4 Cap 6' },
           "7": { link:'https://www.dropbox.com/scl/fi/spivz3z1iiblqb5ze1k4a/The-Rising-of-the-Shield-Hero-T4-Cap-7.mp4?rlkey=hnaszaa8ls8f11krsqpynlx7l&st=w7o2bnfg&raw=1', title:'The Rising of the Shield Hero T4 Cap 7' },
-          "8": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 8' },
-          "9": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 9' },
+          "8": { link:'https://www.dropbox.com/scl/fi/x2szllq3a63wg66l0jiug/The-Rising-of-the-Shield-Hero-T4-Cap-8.mp4?rlkey=31tvwnog476rk9ap81vl9seei&st=xyezq3pb&raw=1', title:'The Rising of the Shield Hero T4 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/ns9cj99y04i8asxbax08y/The-Rising-of-the-Shield-Hero-T4-Cap-9.mp4?rlkey=5ai9ztgc1vtaj4p8j58l2ef6a&st=iuzt9olk&raw=1', title:'The Rising of the Shield Hero T4 Cap 9' },
           "10": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 10' },
           "11": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 11' },
           "12": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 12' },
@@ -1096,7 +1096,7 @@
           "9": { link:'https://www.dropbox.com/scl/fi/gvkj6w4zgwnhdfgue0ude/Clevatess-Majuu-no-Ou-to-Akago-T1-Cap-9.mp4?rlkey=tfjebrtyoknee0efzc9y5583b&st=4mny68e0&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 9' },
           "10": { link:'https://www.dropbox.com/scl/fi/2q4o20ftq2loqijy5myk4/Clevatess-Majuu-no-Ou-to-Akago-T1-Cap-10.mp4?rlkey=3f75o6nj7zq4k828k74kc328o&st=od47ox5c&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 10' },
           "11": { link:'https://www.dropbox.com/scl/fi/9pkzxqi1d65zp6vz1tfjz/Clevatess-Majuu-no-Ou-to-Akago-T1-Cap-11.mp4?rlkey=8s8g112990f03eamass96z7js&st=mzvntv04&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 11' },
-          "12": { link:'&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 12' },
+          "12": { link:'https://www.dropbox.com/scl/fi/q2b7svvof8hb6265ri035/Clevatess-Majuu-no-Ou-to-Akago-T1-Cap-12.mp4?rlkey=jp3zjy8q11d30bhjz70zcdylz&st=3vg1uf6q&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 12' },
         }
       },
       "28": {
