--- a/anime-detail.html
+++ b/anime-detail.html
@@ -1251,7 +1251,7 @@
       18: {
         title: "Chainsaw Man",
         desc: "Denji es un adolescente que vive con un demonio motosierra llamado Pochita. Para pagar la deuda que le dejó su padre tras su muerte, ha tenido que ganarse el pan como puede matar demonios y vender sus cadáveres a la mafia, aunque su vida siempre ha sido miserable. Cuando una traición provoca la muerte de Denji, Pochita hace un contrato con él y Denji revive como Chainsaw Man, un ser humano con el corazón de un demonio.",
-        cover: "chaiw11.jpg",
+        cover: "https://www.dropbox.com/scl/fi/00lym6rgkw0zzitbd00ei/chaiw11.jpg?rlkey=m4eo2vds9l8ok98qtnuvmfvu8&st=p9bb1wcu&raw=1",
         seasons: [
           {
             num: 1,
