--- a/video-player.html
+++ b/video-player.html
@@ -876,18 +876,18 @@
       },
       "18": {
         "1": {
-          "1": { link:'https://www.dropbox.com/scl/fi/4ausz2yh76jgwruh9bky7/Chainsaw-Man-T1-Cap-1.mp4?rlkey=xiiyymdkwcnniqsbovx6naa0g&st=1msgdvre&raw=1', title:'The Gorilla God\'s Go-To Girl T1 Cap 1' },
-          "2": { link:'https://www.dropbox.com/scl/fi/2v91in16g0h60kfvl1lej/Chainsaw-Man-T1-Cap-2.mp4?rlkey=9igv77fdthu6ingvy8ghu0hjp&st=hs7bbdf7&raw=1', title:'The Gorila God\'s Go- To Girl T1 Cap 2' },
-          "3": { link:'https://www.dropbox.com/scl/fi/zam6cr5q1814v1y8pkwjl/Chainsaw-Man-T1-Cap-3.mp4?rlkey=syqk1s3lhg4kpqhrem8cu1orz&st=diaookbm&raw=1', title:'The Gorila God\'s Go- To Girl T1 Cap 3' },
-          "4": { link:'https://www.dropbox.com/scl/fi/hsqc8uqvbkf19wq383byg/Chainsaw-Man-T1-Cap-4.mp4?rlkey=eqi4mfgj5rnylgvjryxjz5y5d&st=n0003z5j&raw=1', title:'The Gorila God\'s Go- To Girl T1 Cap 4' },
-          "5": { link:'https://www.dropbox.com/scl/fi/jnpsat1l0537zqonwcejs/Chainsaw-Man-T1-Cap-5.mp4?rlkey=yxb8hcs15lhczith0j7n8w5aj&st=0sf5yffk&raw=1', title:'The Gorila God\'s Go- To Girl T1 Cap 5' },
-          "6": { link:'https://www.dropbox.com/scl/fi/4sl5habhgc8ck1acacyoe/Chainsaw-Man-T1-Cap-6.mp4?rlkey=kbtqiui3nj7gwnbu8bxsbyglj&st=slc770cr&raw=1', title:'The Gorila God\'s Go- To Girl T1 Cap 6' },
-          "7": { link:'https://www.dropbox.com/scl/fi/q06lyid4i254vy9s9vcn4/Chainsaw-Man-T1-Cap-7.mp4?rlkey=aty4pzp3wjvbmed56csrgevou&st=5ja4hmu3&raw=1', title:'The Gorila God\'s Go- To Girl T1 Cap 7' },
-          "8": { link:'https://www.dropbox.com/scl/fi/ukfvczr72o44o0e5oqx1p/Chainsaw-Man-T1-Cap-8.mp4?rlkey=b49otcetbt00q0itarwd76g03&st=obzr4blt&raw=1', title:'The Gorila God\'s Go- To Girl T1 Cap 8' },
-          "9": { link:'https://www.dropbox.com/scl/fi/ogtv8nzrwoxlk7on8pek1/Chainsaw-Man-T1-Cap-9.mp4?rlkey=ylo483iq4mgbr8nhkvdo44cn0&st=b639o688&raw=1', title:'The Gorila God\'s Go- To Girl T1 Cap 9' },
-          "10": { link:'https://www.dropbox.com/scl/fi/admdwz93o25tl1g7lddwi/Chainsaw-Man-T1-Cap-10.mp4?rlkey=33syf1wvt8x7x8cdngc4tustr&st=laty1sj1&raw=1', title:'The Gorila God\'s Go- To Girl T1 Cap 10' },
-          "11": { link:'https://www.dropbox.com/scl/fi/plzrd40sdkee01i6n4ui7/Chainsaw-Man-T1-Cap-11.mp4?rlkey=av1qr7ggsgqmn0w42upbyzqnf&st=pu33j4kh&raw=1', title:'The Gorila God\'s Go- To Girl T1 Cap 11' },
-          "12": { link:'https://www.dropbox.com/scl/fi/ccez45htv7zwxcsrbi4k1/Chainsaw-Man-T1-Cap-12.mp4?rlkey=ok47yk3smkdh2vcc3le118cyh&st=1m3leanw&raw=1', title:'The Gorila God\'s Go- To Girl T1 Cap 12' },
+          "1": { link:'https://www.dropbox.com/scl/fi/4ausz2yh76jgwruh9bky7/Chainsaw-Man-T1-Cap-1.mp4?rlkey=xiiyymdkwcnniqsbovx6naa0g&st=1msgdvre&raw=1', title:'Chainsaw Man T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/2v91in16g0h60kfvl1lej/Chainsaw-Man-T1-Cap-2.mp4?rlkey=9igv77fdthu6ingvy8ghu0hjp&st=hs7bbdf7&raw=1', title:'Chainsaw Man T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/zam6cr5q1814v1y8pkwjl/Chainsaw-Man-T1-Cap-3.mp4?rlkey=syqk1s3lhg4kpqhrem8cu1orz&st=diaookbm&raw=1', title:'Chainsaw Man T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/hsqc8uqvbkf19wq383byg/Chainsaw-Man-T1-Cap-4.mp4?rlkey=eqi4mfgj5rnylgvjryxjz5y5d&st=n0003z5j&raw=1', title:'Chainsaw Man T1 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/jnpsat1l0537zqonwcejs/Chainsaw-Man-T1-Cap-5.mp4?rlkey=yxb8hcs15lhczith0j7n8w5aj&st=0sf5yffk&raw=1', title:'Chainsaw Man T1 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/4sl5habhgc8ck1acacyoe/Chainsaw-Man-T1-Cap-6.mp4?rlkey=kbtqiui3nj7gwnbu8bxsbyglj&st=slc770cr&raw=1', title:'Chainsaw Man T1 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/q06lyid4i254vy9s9vcn4/Chainsaw-Man-T1-Cap-7.mp4?rlkey=aty4pzp3wjvbmed56csrgevou&st=5ja4hmu3&raw=1', title:'Chainsaw Man T1 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/ukfvczr72o44o0e5oqx1p/Chainsaw-Man-T1-Cap-8.mp4?rlkey=b49otcetbt00q0itarwd76g03&st=obzr4blt&raw=1', title:'Chainsaw Man T1 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/ogtv8nzrwoxlk7on8pek1/Chainsaw-Man-T1-Cap-9.mp4?rlkey=ylo483iq4mgbr8nhkvdo44cn0&st=b639o688&raw=1', title:'Chainsaw Man T1 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/admdwz93o25tl1g7lddwi/Chainsaw-Man-T1-Cap-10.mp4?rlkey=33syf1wvt8x7x8cdngc4tustr&st=laty1sj1&raw=1', title:'Chainsaw Man T1 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/plzrd40sdkee01i6n4ui7/Chainsaw-Man-T1-Cap-11.mp4?rlkey=av1qr7ggsgqmn0w42upbyzqnf&st=pu33j4kh&raw=1', title:'Chainsaw Man T1 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/ccez45htv7zwxcsrbi4k1/Chainsaw-Man-T1-Cap-12.mp4?rlkey=ok47yk3smkdh2vcc3le118cyh&st=1m3leanw&raw=1', title:'Chainsaw Man T1 Cap 12' },
         }
       },
       "19": {
@@ -1205,6 +1205,7 @@
           "20": { link:'https://www.dropbox.com/scl/fi/arvrks4qr0yiynryb2vdb/Dr.-Stone-Temporada-4-Capitulo-20.mp4?rlkey=01skdvehz6eevtfkmbxwo4df4&st=glsu1w6u&raw=1', title:'Dr. Stone T4 Cap 20' },
           "21": { link:'https://www.dropbox.com/scl/fi/rkhdgniclgoji0asog5rv/Dr.-Stone-Temporada-4-Capitulo-21.mp4?rlkey=4vhhxhyysvw305eqtsw7vabg4&st=9f1g4tgw&raw=1', title:'Dr. Stone T4 Cap 21' },
           "22": { link:'https://www.dropbox.com/scl/fi/k93166284hmrun17xugbj/Dr.-Stone-Temporada-4-Capitulo-22.mp4?rlkey=6csrd2ju9ui479a46m03efx69&st=11rcg95m&raw=1', title:'Dr. Stone T4 Cap 22' },
+          "23": { link:'https://www.dropbox.com/scl/fi/m1hbeqkuora8yihrqtoz2/Dr.-Stone-Temporada-4-Capitulo-23.mp4?rlkey=yvz352646omw9ug5bvza0j1ey&st=qfsvwmrk&raw=1', title:'Dr. Stone T4 Cap 23' },
         }
       },
       "29": {
