--- a/anime-detail.html
+++ b/anime-detail.html
@@ -513,7 +513,7 @@
           {
             num: 4,
 	    name: "Temporada 2",
-            cover: "wermi.png",
+            cover: "https://www.dropbox.com/scl/fi/1es250wkd4i4skvdo9pjo/wermi.png?rlkey=puhwrzseyiexioav4w15cydyc&st=09oer5op&raw=1",
             eps: [
               {title:"Re:Zero T2 Cap 1"},
               {title:"Re:Zero T2 Cap 2"},
@@ -968,7 +968,6 @@
               { title: "Demon Slayer T1 Cap 12"},
               { title: "Demon Slayer T1 Cap 13"},
               { title: "Demon Slayer T1 Cap 14"},
-              { title: "Demon Slayer T1 Cap 15"},
               { title: "Demon Slayer T1 Cap 15"},
               { title: "Demon Slayer T1 Cap 16"},
               { title: "Demon Slayer T1 Cap 17"},
