--- a/video-player.html
+++ b/video-player.html
@@ -356,12 +356,12 @@
           "13": { link:'https://www.dropbox.com/scl/fi/io9kh7d0povt5excw6qiz/ReZero-Temporada-1-Capitulo-13-Espa-ol-Latino.mp4?rlkey=aa6lu9ueonnlvmkohq1mkqr0m&st=wonf1ob0&raw=1', title:'Re:Zero T1 Cap 13' },
           "14": { link:'https://www.dropbox.com/scl/fi/5y1ykfaq0m5gulrujcte8/ReZero-Temporada-1-Capitulo-14-Espa-ol-Latino.mp4?rlkey=czx41rep09c71xki0mybb8gft&st=ysrt1ssr&raw=1', title:'Re:Zero T1 Cap 14' },
           "15": { link:'https://www.dropbox.com/scl/fi/mecovbhxxbvc4d68dae2v/ReZero-Temporada-1-Capitulo-15-Espa-ol-Latino.mp4?rlkey=108eujwuthyqobjn5unizn1sm&st=a5721h8w&raw=1', title:'Re:Zero T1 Cap 15' },
-          "16": { link:'https://www.dropbox.com/scl/fi/0eghbocd5ckd0uqatkcnd/ReZero-Temporada-1-Capitulo-16-Espa-ol-Latino.mp4?rlkey=s9rmd6ml5ar9xof1p2g5buq6&st=oz4cxz8g&raw=1', title:'Re:Zero T1 Cap 16' },
-          "17": { link:'https://www.dropbox.com/scl/fi/hxrvyxwe1062yykyylmwk/ReZero-Temporada-2-Capitulo-24-Espa-ol-Latino.mp4?rlkey=2xyh9rcfdw8x4k0axviv0pgu6&st=dka4b0me&raw=1', title:'Re:Zero T1 Cap 17' },
+          "16": { link:'https://www.dropbox.com/scl/fi/c8subdb32qq3orgf85h14/ReZero-Temporada-1-Capitulo-16-Espa-ol-Latino.mp4?rlkey=pupweem5sve5toy40huhgvxem&st=8mta3uj5&raw=1', title:'Re:Zero T1 Cap 16' },
+          "17": { link:'https://www.dropbox.com/scl/fi/dskoys2oc2q73sedf1hah/ReZero-Temporada-1-Capitulo-17-Espa-ol-Latino.mp4?rlkey=o3tapg7n5jb4vpoq7xfrs179v&st=vz46iijm&raw=1', title:'Re:Zero T1 Cap 17' },
           "18": { link:'https://www.dropbox.com/scl/fi/uru2i8yrmrmyw14181kc4/ReZero-Temporada-1-Capitulo-18-Espa-ol-Latino.mp4?rlkey=hlpha90785h2qnnmt9hdfaq8j&st=khtbof0j&raw=1', title:'Re:Zero T1 Cap 18' },
           "19": { link:'https://www.dropbox.com/scl/fi/l7g1aokxystbz8e0op04h/ReZero-Temporada-1-Capitulo-19-Espa-ol-Latino.mp4?rlkey=0ki9jynw1c8tdcdkwd6h5ps32&st=h4pfpuhx&raw=1', title:'Re:Zero T1 Cap 19' },
-          "20": { link:'https://www.dropbox.com/scl/fi/6givoeay0746k982j5bow/ReZero-Temporada-1-Capitulo-20-Espa-ol-Latino.mp4?rlkey=d48r6lvnecbf4asdymckb9lpk&st=uy88snsw&raw=1', title:'Re:Zero T1 Cap 20' },
-          "21": { link:'https://www.dropbox.com/scl/fi/cj3e4a2m87h5s1o4lxyjf/ReZero-Temporada-1-Capitulo-21-Espa-ol-Latino.mp4?rlkey=0vwquoh9cxbpsc74vby3veo2u&st=5uw0ewy2u&raw=1', title:'Re:Zero T1 Cap 21' },
+          "20": { link:'https://www.dropbox.com/scl/fi/cj3e4a2m87h5s1o4lxyjf/ReZero-Temporada-1-Capitulo-21-Espa-ol-Latino.mp4?rlkey=0vwquoh9cxbpsc74vby3veo2u&st=te7tx9r6&raw=1', title:'Re:Zero T1 Cap 20' },
+          "21": { link:'https://www.dropbox.com/scl/fi/cj3e4a2m87h5s1o4lxyjf/ReZero-Temporada-1-Capitulo-21-Espa-ol-Latino.mp4.rlkey=0vwquoh9cxbpsc74vby3veo2u&st=sl1uwrzp&raw=1', title:'Re:Zero T1 Cap 21' },
           "22": { link:'https://www.dropbox.com/scl/fi/pe8sauxuevta5ajf2asvs/ReZero-Temporada-1-Capitulo-22-Espa-ol-Latino.mp4?rlkey=gh54t3hvenb2y3i866zubl3ox&st=q1zmbxvk&raw=1', title:'Re:Zero T1 Cap 22' },
           "23": { link:'https://www.dropbox.com/scl/fi/wnmcmc155ouhf6g1h6z15/ReZero-Temporada-1-Capitulo-23-Espa-ol-Latino.mp4?rlkey=1reputj9hjauvsyzwzpxgkhvv&st=jsw86qcz&raw=1', title:'Re:Zero T1 Cap 23' },
           "24": { link:'https://www.dropbox.com/scl/fi/ev0ezspz3b2gbeazjwokt/ReZero-Temporada-1-Capitulo-24-Espa-ol-Latino.mp4?rlkey=io71hjm1wdag84q4gl7m3yq4w&st=7s5ni4lj&raw=1', title:'Re:Zero T1 Cap 24' },
