--- a/anime-detail.html
+++ b/anime-detail.html
@@ -1177,6 +1177,24 @@
               { title: "Reborn as a Vending Machine, I Now Wander the Dungeon T1 Cap 12"},
               { title: "Reborn as a Vending Machine, I Now Wander the Dungeon T1 Cap 13"},
             ]
+          },
+          {
+            num: 2,
+            cover: "https://www.dropbox.com/scl/fi/dnj6xs69vqtbrhj0f52n2/rebornt2.jpg?rlkey=pbkfo4ae79pmqm58u8l6gev0d&st=g1l714qi&raw=1",
+            eps: [
+              { title: "Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 1"},
+              { title: "Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 2"},
+              { title: "Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 3"},
+              { title: "Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 4"},
+              { title: "Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 5"},
+              { title: "Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 6"},
+              { title: "Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 7"},
+              { title: "Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 8"},
+              { title: "Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 9"},
+              { title: "Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 10"},
+              { title: "Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 11"},
+              { title: "Reborn as a Vending Machine, I Now Wander the Dungeon T2 Cap 12"},
+            ]
           }
         ]
       },   
