--- a/video-player.html
+++ b/video-player.html
@@ -809,6 +809,20 @@
           "10": { link:'https://www.dropbox.com/scl/fi/zmyksd8zgcuhuzvx5vrku/Cap-10-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=08hgx9esjgupjf9pyp70ay4y0&st=vjwr8wva&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T1 Cap 10' },
           "11": { link:'https://www.dropbox.com/scl/fi/5j67v7ikjbv0mk11wfnjx/Cap-11-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=pe1bqdpi9ykuh5rql3rige2cm&st=2pfuq7wy&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T1 Cap 11' },
           "12": { link:'https://www.dropbox.com/scl/fi/y0ir12tmnr2x92z304fsx/Cap-12-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=df96t8cixtvczvzle0pyyxu23&st=muw3dc0n&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T1 Cap 12' },
+        },
+        "2": {
+          "1": { link:'https://www.dropbox.com/scl/fi/fiv2247eihrew5apl7qu9/T2-Cap-1-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=mfpi5nq7992ms6fs56urmhpeb&st=gggfi4sy&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/4mcfklbb0ea6jv9eebcgu/T2-Cap-2-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=tt27wzcn68e4i17mjj8mkhwds&st=k3m5b64m&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/6g5teh707c7qaqf30vx18/T2-Cap-3-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=lfzc2l3k152n5rzybon2wyx00&st=0ujoitli&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/1p54i3haxxiipa4rob8d7/T2-Cap-4-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=p2x1vljnpepvvikui0wsgacj7&st=p28s4o8i&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/fd8z2gghd2y7cuzs05vu8/T2-Cap-5-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=it83bbnvf7w5bft1boop4987e&st=uj023brh&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/4iyxp3ak3k2tw8kic17jx/T2-Cap-6-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=xtgk8ftjeo56rupgv3im1mvhq&st=afekpv5a&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/3941pm4ury4h8uy32pzs2/T2-Cap-7-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=2slgm2g96ludmwudfic6kz0mq&st=kc1sz6vt&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/90e58n1aanwtcaowp9zlb/T2-Cap-8-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=i26dhb4a1rgblyvg1e7kmi51h&st=y3m6so0w&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/urwt2uoir4ykxk8at4n0y/T2-Cap-9-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=q4ug2eu1waazp4r2vpkopvx6f&st=z7cuyo22&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/spam75xphrw6y1tdn0s80/T2-Cap-10-Tokidoki-Bosotto-Russia-go-de-Dereru-Tonari-no-Alya-san.mp4?rlkey=bf8peymo2p94leittco7ed2w5&st=pv2112fy&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T1 Cap 10' },
+          "11": { link:'&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 11' },
+          "12": { link:'&raw=1', title:'Alya Sometimes Hides Her Feelings in Russian T2 Cap 12' },
         }
       },
       "15": {
@@ -957,7 +971,7 @@
           "7": { link:'https://www.dropbox.com/scl/fi/spivz3z1iiblqb5ze1k4a/The-Rising-of-the-Shield-Hero-T4-Cap-7.mp4?rlkey=hnaszaa8ls8f11krsqpynlx7l&st=w7o2bnfg&raw=1', title:'The Rising of the Shield Hero T4 Cap 7' },
           "8": { link:'https://www.dropbox.com/scl/fi/x2szllq3a63wg66l0jiug/The-Rising-of-the-Shield-Hero-T4-Cap-8.mp4?rlkey=31tvwnog476rk9ap81vl9seei&st=xyezq3pb&raw=1', title:'The Rising of the Shield Hero T4 Cap 8' },
           "9": { link:'https://www.dropbox.com/scl/fi/ns9cj99y04i8asxbax08y/The-Rising-of-the-Shield-Hero-T4-Cap-9.mp4?rlkey=5ai9ztgc1vtaj4p8j58l2ef6a&st=iuzt9olk&raw=1', title:'The Rising of the Shield Hero T4 Cap 9' },
-          "10": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 10' },
+          "10": { link:'https://www.dropbox.com/scl/fi/budjdprik17b6e7em7237/The-Rising-of-the-Shield-Hero-T4-Cap-10.mp4?rlkey=i580tvqny0xjrmwwubnz5zkyf&st=hbud1d1t&raw=1', title:'The Rising of the Shield Hero T4 Cap 10' },
           "11": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 11' },
           "12": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 12' },
         }
@@ -1086,7 +1100,7 @@
           "7": { link:'https://www.dropbox.com/scl/fi/wpka0g4t6ttewn2w71noi/Kaiju-No.-8-T2-Cap-7.mp4?rlkey=963nkht488ethbfgntmpd98e3&st=fhowdymo&raw=1', title:'Kaiju No. 8 T2 Cap 7' },
           "8": { link:'https://www.dropbox.com/scl/fi/82fnydxjtmgp1ztbcki9h/Kaiju-No.-8-T2-Cap-8.mp4?rlkey=ko11c7k2adtw1yre32g7myon2&st=43s78k56&raw=1', title:'Kaiju No. 8 T2 Cap 8' },
           "9": { link:'https://www.dropbox.com/scl/fi/piqowtwom0h07mhpsz97h/Kaiju-No.-8-T2-Cap-9.mp4?rlkey=odga8ew3man1jq2chkbbm8ntd&st=3vpdr6s4&raw=1', title:'Kaiju No. 8 T2 Cap 9' },
-          "10": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 10' },
+          "10": { link:'https://www.dropbox.com/scl/fi/xi6ow83lc7s5i4inp2vfu/Kaiju-No.-8-T2-Cap-10.mp4?rlkey=n1h9lxaxg9nyytg3vgxf0uf6t&st=l4nhm5np&raw=1', title:'Kaiju No. 8 T2 Cap 10' },
           "11": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 11' },
           "12": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 12' },
         }
